--- a/src/components/Header/Header.style.css
+++ b/src/components/Header/Header.style.css
@@ -1,3 +1,9 @@
-.c-header {
-    padding: 50px;
+.c-nav {
+    padding-bottom: 50px;
+}
+
+.c-nav__search-wrapper {
+    max-width: 580px;
+    margin: 0 auto;
+    margin-top: 50px;
 }
