--- a/src/components/Tweets/Tweets.style.css
+++ b/src/components/Tweets/Tweets.style.css
@@ -1,6 +1,18 @@
 .c-cards {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
     margin-top: 50px;
+}
+
+.c-card {
+    width: 100%;
+}
+
+@media (min-width: 750px) {
+    .c-cards {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .c-card {
+        width: 25%;
+    }
 }
