--- a/src/index.css
+++ b/src/index.css
@@ -11,6 +11,12 @@ body {
 
 .o-container {
     margin: 0 auto;
-    padding: 50px 10px;
+    padding: 25px 20px;
     max-width: 1280px;
+}
+
+@media (min-width: 750px) {
+    .o-container {
+        padding: 50px 20px;
+    }
 }
