Fix hero background

--- a/src/components/Hero/Hero.style.css
+++ b/src/components/Hero/Hero.style.css
@@ -5,6 +5,7 @@
     height: 250px;
     background-size: cover;
     background-position: center center;
+    background-repeat: no-repeat;
 }
 
 .Hero:before {
